word of the day finished

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.codecool.mrguinneapig.wotd</groupId>
+            <artifactId>calculator</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
